--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=book_aplication
+spring.datasource.url=jdbc:mysql://localhost:3306/book_app?serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=Alximik12#
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
