--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=Alximik12#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springdoc=DEBUG
-
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+jwt.expiration=300000
+jwt.secret = hellobassqefwkfeferstjhgwfadshdzx
