--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,7 @@ databaseChangeLog:
       file: db/changelog/changes/06-create-users_roles-table.yaml
   - include:
       file: db/changelog/changes/07-insert-admin-to-users_roles.yaml
+  - include:
+      file: db/changelog/changes/08-create-categories-table.yaml
+  - include:
+      file: db/changelog/changes/09-create-books_categories-table.yaml
