--- a/src/main/resources/db/changelog/changes/08-create-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/08-create-categories-table.yaml
@@ -17,6 +17,7 @@ databaseChangeLog:
                   name: name
                   type: varchar(255)
                   constraints:
+                    unique: true
                     nullable: false
               - column:
                   name: description
