--- a/src/main/resources/db/changelog/changes/11-create-shopping_carts-table.yaml
+++ b/src/main/resources/db/changelog/changes/11-create-shopping_carts-table.yaml
@@ -14,10 +14,8 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: user_id
-                  type: BIGINT
+                  name: is_deleted
+                  type: boolean
+                  defaultValueBoolean: false
                   constraints:
                     nullable: false
-              - column:
-                  name: cart_items_id
-                  type: BIGINT
