--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=123456
-POSTGRES_DATABASE=blog
-POSTGRES_LOCAL_PORT=5434
-POSTGRES_DOCKER_PORT=5432
+MYSQLDB_USER=mysql
+MYSQLDB_PASSWORD=123456
+MYSQLDB_DATABASE=blog
+MYSQLDB_LOCAL_PORT=5434
+MYSQLDB_DOCKER_PORT=5432
 
 SPRING_LOCAL_PORT=8088
 SPRING_DOCKER_PORT=8080
