--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.8"
 
 services:
-  postgresdb:
+  mysqldb:
     platform: linux/arm64
-    image: postgres
+    image: mysql
     restart: unless-stopped
     env_file: ./.env
     environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_DB=$POSTGRES_DATABASE
+      - MYSQLDB_USER=$MYSQLDB_USER
+      - MYSQLDB_PASSWORD=$MYSQLDB_PASSWORD
+      - MYSQLDB_DB=$MYSQLDB_DATABASE
     ports:
-      - $POSTGRES_LOCAL_PORT:$POSTGRES_DOCKER_PORT
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 30s
@@ -19,9 +19,9 @@ services:
       retries: 3
   app:
     depends_on:
-      - postgresdb
+      - mysqldb
     restart: on-failure
-    image: posts-service
+    image: aplication
     build: .
     env_file: ./.env
     ports:
@@ -29,9 +29,9 @@ services:
       - $DEBUG_PORT:$DEBUG_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:postgresql://postgresdb:$POSTGRES_DOCKER_PORT/$POSTGRES_DATABASE",
-        "spring.datasource.username" : "$POSTGRES_USER",
-        "spring.datasource.password" : "$POSTGRES_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect"
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE",
+        "spring.datasource.username" : "$MYSQLDB_USER",
+        "spring.datasource.password" : "$MYSQLDB_PASSWORD",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect"
       }'
       JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
