--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,37 +1,73 @@
-version: "3.8"
-
+#services:
+#  mysqldb:
+#    platform: linux/amd64
+#    image: mysql:8
+#    restart: unless-stopped
+#    env_file: ./.env
+#    environment:
+#      MYSQL_ROOT_PASSWORD: $MYSQLDB_PASSWORD
+#      MYSQL_DATABASE: $MYSQLDB_DATABASE
+#    ports:
+#      - $MYSQLDB_LOCAL_PORT:3306
+#    healthcheck:
+#      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#
+#  app:
+#    depends_on:
+#      - mysqldb
+#    restart: on-failure
+#    image: posts-service
+#    build: .
+#    env_file: ./.env
+#    ports:
+#      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+#      - $DEBUG_PORT:$DEBUG_PORT
+#    environment:
+#      SPRING_APPLICATION_JSON: '{
+#        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/$MYSQLDB_DATABASE?serverTimezone=UTC",
+#        "spring.datasource.username" : "$MYSQLDB_USER",
+#        "spring.datasource.password" : "$MYSQLDB_PASSWORD",
+#        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect"
+#      }'
+#      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:$DEBUG_PORT"
 services:
   mysqldb:
-    platform: linux/arm64
-    image: mysql
+    image: mysql:8
+    platform: linux/amd64
     restart: unless-stopped
     env_file: ./.env
     environment:
-      - MYSQLDB_USER=$MYSQLDB_USER
-      - MYSQLDB_PASSWORD=$MYSQLDB_PASSWORD
-      - MYSQLDB_DB=$MYSQLDB_DATABASE
+      MYSQL_ROOT_PASSWORD: $MYSQLDB_PASSWORD
+      MYSQL_DATABASE: $MYSQLDB_DATABASE
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      - "${MYSQLDB_LOCAL_PORT}:3306"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 30s
-      timeout: 30s
-      retries: 3
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   app:
     depends_on:
-      - mysqldb
+      mysqldb:
+        condition: service_healthy
     restart: on-failure
-    image: aplication
     build: .
+    image: posts-service
     env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
-      - $DEBUG_PORT:$DEBUG_PORT
+      - "${SPRING_LOCAL_PORT}:${SPRING_DOCKER_PORT}"
+      - "${DEBUG_PORT}:${DEBUG_PORT}"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect"
-      }'
-      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+      SPRING_APPLICATION_JSON: |
+        {
+          "spring.datasource.url": "jdbc:mysql://mysqldb:3306/${MYSQLDB_DATABASE}?serverTimezone=UTC",
+          "spring.datasource.username": "root",
+          "spring.datasource.password": "${MYSQLDB_PASSWORD}",
+          "spring.jpa.hibernate.ddl-auto": "update",
+          "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQLDialect"
+        }
+      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${DEBUG_PORT}"
